--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^1.7.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.26.1",
+    "react-router": "^6.28.0",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
